added keyboard accessibility for search bar results. Minor styling changes to the detail coin info page

--- a/app/components/Search/module.Search.css
+++ b/app/components/Search/module.Search.css
@@ -18,3 +18,11 @@
     height: 450px;
     z-index: 1000;
 }
+
+.selectedSuggestion {
+    background-color: #a2d2ff !important;
+}
+
+.selectedSuggestion:hover {
+    background-color: #a2d2ff !important;
+}
