--- a/app/components/PriceGraph/module.PriceGraph.css
+++ b/app/components/PriceGraph/module.PriceGraph.css
@@ -1,5 +1,8 @@
 .center-panel {
-	flex: 0.7;
+	flex: 0.5;
+  height: 100%;
+  align-items: center;
+  justify-items: center;
 	margin-left: 5px;
 	background-color: white;
 	border: solid rgb(187, 184, 184) 1px;
@@ -8,8 +11,7 @@
 
 .line-graph {
     position: relative;
-    width: 100%;
-    /* max-width: 600px; */
+    width: 88%;
     height: 300px;
     border: 1px solid #ccc;
     background: #f9f9f9;
@@ -47,6 +49,5 @@
     width: calc(20% - 5px);
     transform: rotate(-25deg);
   }
-  
-  /* Connect. */
+
   
