--- a/app/components/Search/module.Search.css
+++ b/app/components/Search/module.Search.css
@@ -19,6 +19,10 @@
     z-index: 1000;
 }
 
+.disableCursor {
+	cursor: wait;
+}
+
 .selectedSuggestion {
     background-color: #a2d2ff !important;
 }
